--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@repo/tailwind-config": "*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
@@ -22,6 +23,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tailwindcss": "^3.4.1"
   }
 }
