--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,11 +19,11 @@
     "@repo/database": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@repo/ui": "*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5.3.3"
   }
 }
