--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,9 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./card": "./src/card.tsx"
+    "./tailwind.config.ts": "./tailwind.config.ts",
+    "./nextui": "./src/nextui/index.ts",
+    "./commons": "./src/commons/index.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -28,7 +30,11 @@
     "@types/react": "^18.2.61",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "framer-motion": "^11.3.29"
   }
 }
