refactor(database): migrate from @repo/database to @repo/layer-prisma
- Update .gitignore to include packages/layer-prisma/dist/
- Replace @repo/database dependency with @repo/layer-prisma in apps/web/package.json
- Update import and usage in apps/web/src/app/page.tsx to use @repo/layer-prisma
- Modify packages/database/src/client.ts to export all from @prisma/client

BREAKING CHANGE: This change replaces the direct use of Prisma client with a new layer, which may affect existing database queries and operations.

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,10 @@ yarn-error.log*
 # turbo
 .turbo
 
-# ui dist
+# packages dist
 packages/ui/dist
 packages/database/dist/
+packages/layer-prisma/dist/
 
 # vscode
 .vscode
