--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
-    "@repo/database": "*",
+    "@repo/layer-prisma": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@repo/ui": "*",
