feat(web, layer-prisma): integrate pagination and user list components
- Added `@repo/tailwind-config` and `zod` dependencies to `apps/web/package.json`.
- Updated `IndexPage` in `apps/web/src/app/page.tsx` to use `db.user.getUsers` for fetching paginated users.
- Added `UserList` and `PaginationNext` components to `IndexPage`.
- Updated `tsconfig.json` in `apps/web` and `packages/layer-prisma` to include new path mappings.
- Added `tsup` for building and watching in `packages/layer-prisma/package.json`.
- Replaced `userService` with `Db` class in `packages/layer-prisma/src/index.ts`.
- Updated `turbo.json` to include `BASE_URL` and `DATABASE_URL` in `globalEnv`.

BREAKING CHANGE: Replaced `userService` with `Db` class in `layer-prisma`, which changes the way user data is accessed.

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["BASE_URL", "DATABASE_URL"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
@@ -19,3 +20,4 @@
     "lint": {}
   }
 }
+
