--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,7 +4,12 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["src/components/*"]
+      "@/components/*": ["src/components/*"],
+
+      // layer-prisma
+      "@/director/*": ["../../packages/layer-prisma/src/director/*"],
+      "@/builder/*": ["../../packages/layer-prisma/src/builder/*"],
+      "@/model/*": ["../../packages/layer-prisma/src/model/*"]
     }
   },
   "include": [
@@ -13,6 +18,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+],
   "exclude": ["node_modules"]
 }
