--- a/packages/layer-prisma/package.json
+++ b/packages/layer-prisma/package.json
@@ -5,6 +5,8 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint src/",
     "type-check": "tsc --noEmit"
   },
@@ -13,6 +15,12 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "server-only": "^0.0.1",
+    "tsup": "^8.0.2"
+  },
+  "dependencies": {
+    "prisma-extension-pagination": "^0.7.4",
+    "zod": "^3.23.8"
   }
 }
