--- a/packages/layer-prisma/tsconfig.json
+++ b/packages/layer-prisma/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["./**/*.ts", "./**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "dist"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/director/*": ["src/director/*"],
+      "@/builder/*": ["src/builder/*"],
+      "@/model/*": ["src/model/*"]
+    }
+  }
 }
