--- a/packages/layer-prisma/package.json
+++ b/packages/layer-prisma/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "imports": {
+    "#*": ["./src/*.ts", "./src/*.tsx", "./src/*.d.ts", "./src/*/index.ts", "./src/*/index.tsx", "./src/index.d.ts", "./src/*"]
+  },
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
@@ -15,7 +21,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.5.4",
     "server-only": "^0.0.1",
     "tsup": "^8.0.2"
   },
