feat(auth): implement Discord OAuth and NextAuth
- Add NextAuth configuration with Discord provider
- Update Prisma schema for auth-related models
- Redirect root page to sign-in
- Add necessary environment variables
- Update dependencies for auth functionality

BREAKING CHANGE: Root page now redirects to sign-in instead of showing user list

--- a/apps/web/.env
+++ b/apps/web/.env
@@ -7,3 +7,7 @@
 # Defaults to the local database deployed from the `docker-compose.yml` stack
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+AUTH_SECRET="pqV7Cg178X+8n3gPEaLyukoTWUXcVqXIbpwl/BopfVw=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+
+DISCORD_CLIENT_ID=1277671609049809021
+DISCORD_CLIENT_SECRET=2Gs3-8t9HpZrWUaTmCCyTSo0gcO-tbYz
