--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["BASE_URL", "DATABASE_URL"],
+  "globalEnv": ["BASE_URL", "DATABASE_URL", "DISCORD_CLIENT_ID", "DISCORD_CLIENT_SECRET"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
