chore: :rotating_light: config commit linters

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,8 +3,18 @@
   "name": "web",
   "version": "1.0.0",
   "imports": {
-    "#*": ["./src/*.ts", "./src/*.tsx", "./src/*.d.ts", "./src/*/index.ts", "./src/*/index.tsx", "./src/index.d.ts", "./src/*"],
-    "#auth": ["./auth.ts"]
+    "#*": [
+      "./src/*.ts",
+      "./src/*.tsx",
+      "./src/*.d.ts",
+      "./src/*/index.ts",
+      "./src/*/index.tsx",
+      "./src/index.d.ts",
+      "./src/*"
+    ],
+    "#auth": [
+      "./auth.ts"
+    ]
   },
   "scripts": {
     "dev": "next dev",
