--- a/packages/config-auth/package.json
+++ b/packages/config-auth/package.json
@@ -10,12 +10,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "zod": "3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/env-config": "*",
     "@repo/typescript-config": "*",
-    "next-auth": "5.0.0-beta.17",
+    "next-auth": "^5.0.0-beta.20",
     "tailwindcss": "^3.4.10"
   }
 }
