--- a/packages/config-env/package.json
+++ b/packages/config-env/package.json
@@ -9,6 +9,6 @@
   "devDependencies": {
     "@t3-oss/env-nextjs": "0.11.1",
     "typescript": "^5.5.4",
-    "zod": "3.22.4"
+    "zod": "^3.23.8"
   }
 }
