--- a/packages/layer-prisma/package.json
+++ b/packages/layer-prisma/package.json
@@ -5,7 +5,15 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "imports": {
-    "#*": ["./src/*.ts", "./src/*.tsx", "./src/*.d.ts", "./src/*/index.ts", "./src/*/index.tsx", "./src/index.d.ts", "./src/*"]
+    "#*": [
+      "./src/*.ts",
+      "./src/*.tsx",
+      "./src/*.d.ts",
+      "./src/*/index.ts",
+      "./src/*/index.tsx",
+      "./src/index.d.ts",
+      "./src/*"
+    ]
   },
   "exports": {
     ".": "./src/index.ts"
@@ -18,9 +26,9 @@
   "devDependencies": {
     "@repo/database": "*",
     "@repo/typescript-config": "*",
-    "typescript": "^5.5.4",
     "server-only": "^0.0.1",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "prisma-extension-pagination": "^0.7.4",
