--- a/packages/config-auth/package.json
+++ b/packages/config-auth/package.json
@@ -13,6 +13,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@repo/env-config": "*",
     "@repo/typescript-config": "*",
     "next-auth": "^5.0.0-beta.20",
