build: :green_heart: fix db generate

--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -6,4 +6,10 @@
 
 # Defaults to the local database deployed from the `docker-compose.yml` stack
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+POSTGRES_PRISMA_URL=postgresql://postgres:postgres@localhost:5432/postgres?schema=public
+POSTGRES_URL_NON_POOLING=postgresql://postgres:postgres@localhost:5432/postgres?schema=public
+AUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
