--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.20",
+    "next-themes": "0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -41,6 +42,7 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "next-auth": "^5.0.0-beta.20",
     "typescript": "^5.5.4"
   }
 }
