--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -29,6 +29,7 @@
     "next-themes": "0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.53.0",
     "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
   },
