--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,7 +47,8 @@
     "postcss": "^8.4.35",
     "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "zustand": "4.5.5"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
@@ -56,7 +57,7 @@
     "framer-motion": "^11.3.29",
     "lucide-react": "^0.436.0",
     "react-dropzone": "14.2.3",
-    "react-hook-form": "7.50.1",
+    "react-hook-form": "7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   }
