--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,8 +12,8 @@
     "dev": "tsup src/* --watch",
     "format": "prisma format",
     "generate": "prisma generate",
-    "prebuild": "npm run generate",
-    "predev": "npm run generate",
+    "prebuild": "bun run generate",
+    "predev": "bun run generate",
     "studio": "prisma studio"
   },
   "dependencies": {
