feat(components): :sparkles: add data-table to show novels

--- a/packages/layer-prisma/package.json
+++ b/packages/layer-prisma/package.json
@@ -17,7 +17,8 @@
   },
   "exports": {
     ".": "./src/index.ts",
-    "./db": "./src/db.ts"
+    "./db": "./src/db.ts",
+    "./model/*": "./src/model/*.ts"
   },
   "scripts": {
     "build": "tsup",
