--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,6 +28,7 @@
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "0.3.0",
+    "puppeteer": "^23.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
