--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -25,10 +25,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "bcrypt": "^5.1.1",
+    "jsdom": "^25.0.0",
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "0.3.0",
-    "puppeteer": "^23.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
@@ -42,6 +42,7 @@
     "@repo/typescript-config": "*",
     "@repo/ui": "*",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
