feat(app): pull novel working

--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,7 @@
       "cache": false
     },
     "dev": {
-      "dependsOn": ["^generate", "^build"],
+      "dependsOn": ["^generate"],
       "cache": false,
       "persistent": true
     },
