feat: implement author listing and improve novel listing
- Add author listing functionality with pagination
- Enhance novel listing with card-based UI and pagination
- Refactor search params handling for both authors and novels
- Update sidebar to include author management options
- Improve novel card display with author and chapter count information
- Add debounce hook dependency for search functionality

--- a/packages/layer-prisma/package.json
+++ b/packages/layer-prisma/package.json
@@ -18,7 +18,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./db": "./src/db.ts",
-    "./model/*": "./src/model/*.ts"
+    "./model/*": "./src/model/*.ts",
+    "./utils": "./src/utils.ts"
   },
   "scripts": {
     "build": "tsup",
