--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -23,6 +23,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@custom-react-hooks/use-debounce": "^1.5.1",
     "@hookform/resolvers": "^3.9.0",
     "bcrypt": "^5.1.1",
     "jsdom": "^25.0.0",
