--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
     "react-hot-toast": "^2.4.1",
+    "space-slug": "^2.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
