feat(layer-fetch): :construction: udpate env vars & workflow to publish fb post

--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -13,3 +13,9 @@ AUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
+FB_API_BASE_URL=https://graph.facebook.com/v21.0
+FB_ACCESS_TOKEN=
+FB_APP_SECRET=
+FB_PAGE_ID=
+FB_SYSTEM_USER_ID=
+FB_BUSINESS_ID=
