--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,13 @@
     "POSTGRES_URL_NON_POOLING",
     "AUTH_SECRET",
     "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET"
+    "DISCORD_CLIENT_SECRET",
+    "FB_API_BASE_URL",
+    "FB_ACCESS_TOKEN",
+    "FB_APP_SECRET",
+    "FB_PAGE_ID",
+    "FB_SYSTEM_USER_ID",
+    "FB_BUSINESS_ID"
   ],
   "tasks": {
     "build": {
