--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -31,6 +31,7 @@
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "0.3.0",
+    "nuqs": "^1.19.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
