--- a/packages/config-auth/package.json
+++ b/packages/config-auth/package.json
@@ -16,7 +16,6 @@
     "@repo/database": "*",
     "@repo/env-config": "*",
     "@repo/typescript-config": "*",
-    "next-auth": "^5.0.0-beta.20",
-    "tailwindcss": "^3.4.10"
+    "next-auth": "^5.0.0-beta.20"
   }
 }
