--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,6 +26,8 @@
     "@codejamboree/replace-tags": "^1.2.2",
     "@custom-react-hooks/use-debounce": "^1.5.1",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.5.6",
+    "@react-aria/i18n": "^3.12.3",
     "bcrypt": "^5.1.1",
     "jsdom": "^25.0.0",
     "next": "^14.2.15",
