ci(root): :green_heart: update vercel cron job

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/follow-up",
-      "schedule": "20 8 * * *"
+      "path": "/api/cron/follow-up",
+      "schedule": "30 8 * * *"
     }
   ]
 }
