--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
     "FB_APP_SECRET",
     "FB_PAGE_ID",
     "FB_SYSTEM_USER_ID",
-    "FB_BUSINESS_ID"
+    "FB_BUSINESS_ID",
+    "CRON_SECRET"
   ],
   "tasks": {
     "build": {
