feat(root): :construction: astro integration

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -25,4 +25,4 @@ ls:
 ignore:
   - .git
   - node_modules
-  - '{apps,packages}/*/{node_modules,.expo,.turbo,.next,.swc}'
+  - '{apps,packages}/*/{node_modules,.expo,.turbo,.next,.swc,.astro,.vscode}'
