--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -39,7 +39,8 @@
     "react-hook-form": "7.53.0",
     "react-hot-toast": "^2.4.1",
     "space-slug": "^2.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@repo/auth-config": "*",
