--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,7 +50,7 @@
     "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "zustand": "4.5.5"
+    "zustand": "^5.0.1"
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
